--- a/Cookie/Cookie/CKRecipesView.xib
+++ b/Cookie/Cookie/CKRecipesView.xib
@@ -2,17 +2,16 @@
 <archive type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1060</int>
-		<string key="IBDocument.SystemVersion">10K549</string>
-		<string key="IBDocument.InterfaceBuilderVersion">1938</string>
-		<string key="IBDocument.AppKitVersion">1038.36</string>
-		<string key="IBDocument.HIToolboxVersion">461.00</string>
+		<string key="IBDocument.SystemVersion">11E53</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
+		<string key="IBDocument.AppKitVersion">1138.47</string>
+		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin</string>
-			<string key="NS.object.0">1938</string>
+			<string key="NS.object.0">2182</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>NSScroller</string>
-			<string>NSTableHeaderView</string>
 			<string>NSButton</string>
 			<string>NSScrollView</string>
 			<string>NSTextFieldCell</string>
@@ -83,7 +82,6 @@
 						<string key="NSFrame">{{484, 20}, {96, 22}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSSearchFieldCell" key="NSCell" id="975758564">
 							<int key="NSCellFlags">343014976</int>
@@ -172,27 +170,15 @@
 														<object class="NSTableView" id="420029149">
 															<reference key="NSNextResponder" ref="368779099"/>
 															<int key="NSvFlags">256</int>
-															<string key="NSFrameSize">{518, 362}</string>
+															<string key="NSFrameSize">{518, 378}</string>
 															<reference key="NSSuperview" ref="368779099"/>
 															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="463491155"/>
 															<bool key="NSEnabled">YES</bool>
-															<object class="NSTableHeaderView" key="NSHeaderView" id="747529715">
-																<reference key="NSNextResponder" ref="43277927"/>
-																<int key="NSvFlags">256</int>
-																<string key="NSFrameSize">{518, 17}</string>
-																<reference key="NSSuperview" ref="43277927"/>
-																<reference key="NSWindow"/>
-																<reference key="NSNextKeyView" ref="978104964"/>
-																<bool key="NSViewCanDrawConcurrently">YES</bool>
-																<reference key="NSTableView" ref="420029149"/>
-															</object>
-															<object class="_NSCornerView" key="NSCornerView" id="978104964">
-																<reference key="NSNextResponder" ref="245819107"/>
+															<object class="_NSCornerView" key="NSCornerView">
+																<nil key="NSNextResponder"/>
 																<int key="NSvFlags">-2147483392</int>
 																<string key="NSFrame">{{224, 0}, {16, 17}}</string>
-																<reference key="NSSuperview" ref="245819107"/>
-																<reference key="NSWindow"/>
 																<reference key="NSNextKeyView" ref="368779099"/>
 															</object>
 															<array class="NSMutableArray" key="NSTableColumns">
@@ -264,9 +250,10 @@
 															<int key="NSDraggingSourceMaskForNonLocal">0</int>
 															<bool key="NSAllowsTypeSelect">YES</bool>
 															<int key="NSTableViewDraggingDestinationStyle">0</int>
+															<int key="NSTableViewGroupRowStyle">1</int>
 														</object>
 													</array>
-													<string key="NSFrame">{{1, 17}, {518, 362}}</string>
+													<string key="NSFrame">{{1, 1}, {518, 378}}</string>
 													<reference key="NSSuperview" ref="245819107"/>
 													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="420029149"/>
@@ -286,8 +273,7 @@
 													<reference key="NSNextKeyView" ref="859057640"/>
 													<reference key="NSTarget" ref="245819107"/>
 													<string key="NSAction">_doScroller:</string>
-													<double key="NSCurValue">37</double>
-													<double key="NSPercent">0.1947367936372757</double>
+													<double key="NSPercent">0.99736147757255933</double>
 												</object>
 												<object class="NSScroller" id="859057640">
 													<reference key="NSNextResponder" ref="245819107"/>
@@ -299,34 +285,17 @@
 													<int key="NSsFlags">1</int>
 													<reference key="NSTarget" ref="245819107"/>
 													<string key="NSAction">_doScroller:</string>
-													<double key="NSPercent">0.99772209567198178</double>
+													<double key="NSPercent">0.9980732177263969</double>
 												</object>
-												<object class="NSClipView" id="43277927">
-													<reference key="NSNextResponder" ref="245819107"/>
-													<int key="NSvFlags">2304</int>
-													<array class="NSMutableArray" key="NSSubviews">
-														<reference ref="747529715"/>
-													</array>
-													<string key="NSFrame">{{1, 0}, {518, 17}}</string>
-													<reference key="NSSuperview" ref="245819107"/>
-													<reference key="NSWindow"/>
-													<reference key="NSNextKeyView" ref="747529715"/>
-													<reference key="NSDocView" ref="747529715"/>
-													<reference key="NSBGColor" ref="686925377"/>
-													<int key="NScvFlags">4</int>
-												</object>
-												<reference ref="978104964"/>
 											</array>
 											<string key="NSFrame">{{17, 17}, {520, 380}}</string>
 											<reference key="NSSuperview" ref="82563441"/>
 											<reference key="NSWindow"/>
-											<reference key="NSNextKeyView" ref="43277927"/>
-											<int key="NSsFlags">562</int>
+											<reference key="NSNextKeyView"/>
+											<int key="NSsFlags">133682</int>
 											<reference key="NSVScroller" ref="463491155"/>
 											<reference key="NSHScroller" ref="859057640"/>
 											<reference key="NSContentView" ref="368779099"/>
-											<reference key="NSHeaderClipView" ref="43277927"/>
-											<reference key="NSCornerView" ref="978104964"/>
 											<bytes key="NSScrollAmts">QSAAAEEgAABCmAAAQpgAAA</bytes>
 										</object>
 									</array>
@@ -361,24 +330,14 @@
 														<object class="NSTableView" id="795790159">
 															<reference key="NSNextResponder" ref="210162039"/>
 															<int key="NSvFlags">256</int>
-															<string key="NSFrameSize">{518, 362}</string>
+															<string key="NSFrameSize">{518, 378}</string>
 															<reference key="NSSuperview" ref="210162039"/>
 															<reference key="NSNextKeyView" ref="921548202"/>
 															<bool key="NSEnabled">YES</bool>
-															<object class="NSTableHeaderView" key="NSHeaderView" id="231013767">
-																<reference key="NSNextResponder" ref="858577175"/>
-																<int key="NSvFlags">256</int>
-																<string key="NSFrameSize">{518, 17}</string>
-																<reference key="NSSuperview" ref="858577175"/>
-																<reference key="NSNextKeyView" ref="778948346"/>
-																<bool key="NSViewCanDrawConcurrently">YES</bool>
-																<reference key="NSTableView" ref="795790159"/>
-															</object>
-															<object class="_NSCornerView" key="NSCornerView" id="778948346">
-																<reference key="NSNextResponder" ref="583601559"/>
+															<object class="_NSCornerView" key="NSCornerView">
+																<nil key="NSNextResponder"/>
 																<int key="NSvFlags">-2147483392</int>
 																<string key="NSFrame">{{224, 0}, {16, 17}}</string>
-																<reference key="NSSuperview" ref="583601559"/>
 																<reference key="NSNextKeyView" ref="210162039"/>
 															</object>
 															<array class="NSMutableArray" key="NSTableColumns">
@@ -425,9 +384,10 @@
 															<int key="NSDraggingSourceMaskForNonLocal">0</int>
 															<bool key="NSAllowsTypeSelect">YES</bool>
 															<int key="NSTableViewDraggingDestinationStyle">0</int>
+															<int key="NSTableViewGroupRowStyle">1</int>
 														</object>
 													</array>
-													<string key="NSFrame">{{1, 17}, {518, 362}}</string>
+													<string key="NSFrame">{{1, 1}, {518, 378}}</string>
 													<reference key="NSSuperview" ref="583601559"/>
 													<reference key="NSNextKeyView" ref="795790159"/>
 													<reference key="NSDocView" ref="795790159"/>
@@ -445,8 +405,7 @@
 													<reference key="NSNextKeyView" ref="100371411"/>
 													<reference key="NSTarget" ref="583601559"/>
 													<string key="NSAction">_doScroller:</string>
-													<double key="NSCurValue">37</double>
-													<double key="NSPercent">0.1947367936372757</double>
+													<double key="NSPercent">0.99736147757255933</double>
 												</object>
 												<object class="NSScroller" id="100371411">
 													<reference key="NSNextResponder" ref="583601559"/>
@@ -457,32 +416,16 @@
 													<int key="NSsFlags">1</int>
 													<reference key="NSTarget" ref="583601559"/>
 													<string key="NSAction">_doScroller:</string>
-													<double key="NSPercent">0.99772209567198178</double>
+													<double key="NSPercent">0.9980732177263969</double>
 												</object>
-												<object class="NSClipView" id="858577175">
-													<reference key="NSNextResponder" ref="583601559"/>
-													<int key="NSvFlags">2304</int>
-													<array class="NSMutableArray" key="NSSubviews">
-														<reference ref="231013767"/>
-													</array>
-													<string key="NSFrame">{{1, 0}, {518, 17}}</string>
-													<reference key="NSSuperview" ref="583601559"/>
-													<reference key="NSNextKeyView" ref="231013767"/>
-													<reference key="NSDocView" ref="231013767"/>
-													<reference key="NSBGColor" ref="686925377"/>
-													<int key="NScvFlags">4</int>
-												</object>
-												<reference ref="778948346"/>
 											</array>
 											<string key="NSFrame">{{17, 17}, {520, 380}}</string>
 											<reference key="NSSuperview" ref="1021005106"/>
-											<reference key="NSNextKeyView" ref="858577175"/>
-											<int key="NSsFlags">562</int>
+											<reference key="NSNextKeyView"/>
+											<int key="NSsFlags">133682</int>
 											<reference key="NSVScroller" ref="921548202"/>
 											<reference key="NSHScroller" ref="100371411"/>
 											<reference key="NSContentView" ref="210162039"/>
-											<reference key="NSHeaderClipView" ref="858577175"/>
-											<reference key="NSCornerView" ref="778948346"/>
 											<bytes key="NSScrollAmts">QSAAAEEgAABCmAAAQpgAAA</bytes>
 										</object>
 									</array>
@@ -509,24 +452,14 @@
 														<object class="NSTableView" id="82221951">
 															<reference key="NSNextResponder" ref="278534917"/>
 															<int key="NSvFlags">256</int>
-															<string key="NSFrameSize">{518, 362}</string>
+															<string key="NSFrameSize">{518, 378}</string>
 															<reference key="NSSuperview" ref="278534917"/>
 															<reference key="NSNextKeyView" ref="7546593"/>
 															<bool key="NSEnabled">YES</bool>
-															<object class="NSTableHeaderView" key="NSHeaderView" id="749684564">
-																<reference key="NSNextResponder" ref="989185290"/>
-																<int key="NSvFlags">256</int>
-																<string key="NSFrameSize">{518, 17}</string>
-																<reference key="NSSuperview" ref="989185290"/>
-																<reference key="NSNextKeyView" ref="349839330"/>
-																<bool key="NSViewCanDrawConcurrently">YES</bool>
-																<reference key="NSTableView" ref="82221951"/>
-															</object>
-															<object class="_NSCornerView" key="NSCornerView" id="349839330">
-																<reference key="NSNextResponder" ref="493666393"/>
+															<object class="_NSCornerView" key="NSCornerView">
+																<nil key="NSNextResponder"/>
 																<int key="NSvFlags">-2147483392</int>
 																<string key="NSFrame">{{224, 0}, {16, 17}}</string>
-																<reference key="NSSuperview" ref="493666393"/>
 																<reference key="NSNextKeyView" ref="278534917"/>
 															</object>
 															<array class="NSMutableArray" key="NSTableColumns">
@@ -574,9 +507,10 @@
 															<int key="NSDraggingSourceMaskForNonLocal">0</int>
 															<bool key="NSAllowsTypeSelect">YES</bool>
 															<int key="NSTableViewDraggingDestinationStyle">0</int>
+															<int key="NSTableViewGroupRowStyle">1</int>
 														</object>
 													</array>
-													<string key="NSFrame">{{1, 17}, {518, 362}}</string>
+													<string key="NSFrame">{{1, 1}, {518, 378}}</string>
 													<reference key="NSSuperview" ref="493666393"/>
 													<reference key="NSNextKeyView" ref="82221951"/>
 													<reference key="NSDocView" ref="82221951"/>
@@ -594,8 +528,7 @@
 													<reference key="NSNextKeyView" ref="359296206"/>
 													<reference key="NSTarget" ref="493666393"/>
 													<string key="NSAction">_doScroller:</string>
-													<double key="NSCurValue">37</double>
-													<double key="NSPercent">0.1947367936372757</double>
+													<double key="NSPercent">0.99736147757255933</double>
 												</object>
 												<object class="NSScroller" id="359296206">
 													<reference key="NSNextResponder" ref="493666393"/>
@@ -606,32 +539,16 @@
 													<int key="NSsFlags">1</int>
 													<reference key="NSTarget" ref="493666393"/>
 													<string key="NSAction">_doScroller:</string>
-													<double key="NSPercent">0.99772209567198178</double>
+													<double key="NSPercent">0.9980732177263969</double>
 												</object>
-												<object class="NSClipView" id="989185290">
-													<reference key="NSNextResponder" ref="493666393"/>
-													<int key="NSvFlags">2304</int>
-													<array class="NSMutableArray" key="NSSubviews">
-														<reference ref="749684564"/>
-													</array>
-													<string key="NSFrame">{{1, 0}, {518, 17}}</string>
-													<reference key="NSSuperview" ref="493666393"/>
-													<reference key="NSNextKeyView" ref="749684564"/>
-													<reference key="NSDocView" ref="749684564"/>
-													<reference key="NSBGColor" ref="686925377"/>
-													<int key="NScvFlags">4</int>
-												</object>
-												<reference ref="349839330"/>
 											</array>
 											<string key="NSFrame">{{17, 17}, {520, 380}}</string>
 											<reference key="NSSuperview" ref="48510142"/>
-											<reference key="NSNextKeyView" ref="989185290"/>
-											<int key="NSsFlags">562</int>
+											<reference key="NSNextKeyView"/>
+											<int key="NSsFlags">133682</int>
 											<reference key="NSVScroller" ref="7546593"/>
 											<reference key="NSHScroller" ref="359296206"/>
 											<reference key="NSContentView" ref="278534917"/>
-											<reference key="NSHeaderClipView" ref="989185290"/>
-											<reference key="NSCornerView" ref="349839330"/>
 											<bytes key="NSScrollAmts">QSAAAEEgAABCmAAAQpgAAA</bytes>
 										</object>
 									</array>
@@ -864,7 +781,6 @@
 						<array class="NSMutableArray" key="children">
 							<reference ref="420029149"/>
 							<reference ref="859057640"/>
-							<reference ref="747529715"/>
 							<reference ref="463491155"/>
 						</array>
 						<reference key="parent" ref="82563441"/>
@@ -880,11 +796,6 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">83</int>
 						<reference key="object" ref="859057640"/>
-						<reference key="parent" ref="245819107"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">82</int>
-						<reference key="object" ref="747529715"/>
 						<reference key="parent" ref="245819107"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -939,7 +850,6 @@
 						<reference key="object" ref="493666393"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="7546593"/>
-							<reference ref="749684564"/>
 							<reference ref="359296206"/>
 							<reference ref="82221951"/>
 						</array>
@@ -972,11 +882,6 @@
 						<reference key="parent" ref="493666393"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">168</int>
-						<reference key="object" ref="749684564"/>
-						<reference key="parent" ref="493666393"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">167</int>
 						<reference key="object" ref="7546593"/>
 						<reference key="parent" ref="493666393"/>
@@ -1002,7 +907,6 @@
 						<reference key="object" ref="583601559"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="921548202"/>
-							<reference ref="231013767"/>
 							<reference ref="100371411"/>
 							<reference ref="795790159"/>
 						</array>
@@ -1032,11 +936,6 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">158</int>
 						<reference key="object" ref="100371411"/>
-						<reference key="parent" ref="583601559"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">157</int>
-						<reference key="object" ref="231013767"/>
 						<reference key="parent" ref="583601559"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -1072,7 +971,6 @@
 				<string key="154.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="155.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="156.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="157.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="158.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="159.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="160.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -1082,7 +980,6 @@
 				<string key="165.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="166.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="167.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="168.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="169.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="170.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="171.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -1094,7 +991,6 @@
 				<string key="185.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="80.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="81.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="82.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="83.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="84.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="85.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
